create ui lib and use it in landing

--- a/frontend/projects/landing/src/styles.scss
+++ b/frontend/projects/landing/src/styles.scss
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+$theme-blue-bg: linear-gradient(to right, #3b82f6, #06b6d4);
+$theme-green-bg: linear-gradient(to right, #16a34a, #10b981);
+$theme-purple-bg: linear-gradient(to right, #8b5cf6, #ec4899);
+$theme-pink-bg: linear-gradient(to right, #ec4899, #f43f5e);
+$theme-orange-bg: linear-gradient(to right, #fb923c, #f97316);
+
+$theme-text-color: white;
+
+$theme-blue-accent: #2563eb;
+$theme-green-accent: #10b981;
+$theme-purple-accent: #8b5cf6;
+$theme-pink-accent: #ec4899;
+$theme-orange-accent: #fb923c;
